--- a/stories/index.html
+++ b/stories/index.html
@@ -2385,6 +2385,12 @@
       <td><a name="hu0001"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0002</td>
+      <td><a href="/stories/hu/0002_nézd-az-állatokat_slides.html" target="_blank">Nézd az állatokat</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0002"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0003</td>
       <td><a href="/stories/hu/0003_iskolai-ruhák_slides.html" target="_blank">Iskolai ruhák</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2427,6 +2433,12 @@
       <td><a name="hu0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0089</td>
+      <td><a href="/stories/hu/0089_khalai-a-növényekkel-beszél_slides.html" target="_blank">Khalai a növényekkel beszél</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0089"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0112</td>
       <td><a href="/stories/hu/0112_a-testem_slides.html" target="_blank">A testem</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2445,16 +2457,46 @@
       <td><a name="hu0129"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0156</td>
+      <td><a href="/stories/hu/0156_az-éhes-krokodil_slides.html" target="_blank">Az éhes krokodil</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0210</td>
+      <td><a href="/stories/hu/0210_tingi-és-a-tehenek_slides.html" target="_blank">Tingi és a tehenek</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0210"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0231</td>
       <td><a href="/stories/hu/0231_az-időjárás_slides.html" target="_blank">Az időjárás</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="hu0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0271</td>
+      <td><a href="/stories/hu/0271_kettő_slides.html" target="_blank">Kettő</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0296</td>
+      <td><a href="/stories/hu/0296_banánárus-tom_slides.html" target="_blank">Banánárus Tom</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0296"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0302</td>
       <td><a href="/stories/hu/0302_a-tűz_slides.html" target="_blank">A tűz</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="hu0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0327</td>
+      <td><a href="/stories/hu/0327_állatos-számoló_slides.html" target="_blank">Állatos számoló</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0327"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -6433,7 +6475,7 @@
       <td>0002</td>
       <td><a href="http://africanstorybook.org/stories/look-animals">Look at the animals</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0002">ar</a>, <a href="#bn0002">bn</a>, <a href="#da0002">da</a>, <a href="#de0002">de</a>, <a href="#eo0002">eo</a>, <a href="#es0002">es</a>, <a href="#fa0002">fa</a>, <a href="#gu0002">gu</a>, <a href="#hi0002">hi</a>, <a href="#it0002">it</a>, <a href="#ja0002">ja</a>, <a href="#ko0002">ko</a>, <a href="#nb0002">nb</a>, <a href="#nn0002">nn</a>, <a href="#pa0002">pa</a>, <a href="#pl0002">pl</a>, <a href="#ru0002">ru</a>, <a href="#tl0002">tl</a>, <a href="#tr0002">tr</a>, <a href="#ur0002">ur</a>, <a href="#vi0002">vi</a>, <a href="#yue0002">yue</a>, <a href="#zh0002">zh</a></td>
+      <td><a href="#ar0002">ar</a>, <a href="#bn0002">bn</a>, <a href="#da0002">da</a>, <a href="#de0002">de</a>, <a href="#eo0002">eo</a>, <a href="#es0002">es</a>, <a href="#fa0002">fa</a>, <a href="#gu0002">gu</a>, <a href="#hi0002">hi</a>, <a href="#hu0002">hu</a>, <a href="#it0002">it</a>, <a href="#ja0002">ja</a>, <a href="#ko0002">ko</a>, <a href="#nb0002">nb</a>, <a href="#nn0002">nn</a>, <a href="#pa0002">pa</a>, <a href="#pl0002">pl</a>, <a href="#ru0002">ru</a>, <a href="#tl0002">tl</a>, <a href="#tr0002">tr</a>, <a href="#ur0002">ur</a>, <a href="#vi0002">vi</a>, <a href="#yue0002">yue</a>, <a href="#zh0002">zh</a></td>
     </tr>
     <tr>
       <td>0003</td>
@@ -6595,7 +6637,7 @@
       <td>0089</td>
       <td><a href="http://africanstorybook.org/stories/khalai-talks-plants">Khalai talks to plants</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0089">ar</a>, <a href="#bn0089">bn</a>, <a href="#de0089">de</a>, <a href="#es0089">es</a>, <a href="#fa0089">fa</a>, <a href="#hi0089">hi</a>, <a href="#it0089">it</a>, <a href="#ja0089">ja</a>, <a href="#ko0089">ko</a>, <a href="#nb0089">nb</a>, <a href="#nn0089">nn</a>, <a href="#pa0089">pa</a>, <a href="#pl0089">pl</a>, <a href="#tl0089">tl</a>, <a href="#tr0089">tr</a>, <a href="#ur0089">ur</a>, <a href="#yue0089">yue</a>, <a href="#zh0089">zh</a></td>
+      <td><a href="#ar0089">ar</a>, <a href="#bn0089">bn</a>, <a href="#de0089">de</a>, <a href="#es0089">es</a>, <a href="#fa0089">fa</a>, <a href="#hi0089">hi</a>, <a href="#hu0089">hu</a>, <a href="#it0089">it</a>, <a href="#ja0089">ja</a>, <a href="#ko0089">ko</a>, <a href="#nb0089">nb</a>, <a href="#nn0089">nn</a>, <a href="#pa0089">pa</a>, <a href="#pl0089">pl</a>, <a href="#tl0089">tl</a>, <a href="#tr0089">tr</a>, <a href="#ur0089">ur</a>, <a href="#yue0089">yue</a>, <a href="#zh0089">zh</a></td>
     </tr>
     <tr>
       <td>0090</td>
@@ -6745,7 +6787,7 @@
       <td>0156</td>
       <td><a href="http://africanstorybook.org/stories/hungry-crocodile">The hungry crocodile</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0156">ar</a>, <a href="#bn0156">bn</a>, <a href="#ca0156">ca</a>, <a href="#de0156">de</a>, <a href="#es0156">es</a>, <a href="#fa0156">fa</a>, <a href="#gu0156">gu</a>, <a href="#it0156">it</a>, <a href="#ja0156">ja</a>, <a href="#ko0156">ko</a>, <a href="#nb0156">nb</a>, <a href="#nn0156">nn</a>, <a href="#pa0156">pa</a>, <a href="#pl0156">pl</a>, <a href="#sv0156">sv</a>, <a href="#tl0156">tl</a>, <a href="#tr0156">tr</a>, <a href="#ur0156">ur</a>, <a href="#yue0156">yue</a>, <a href="#zh0156">zh</a></td>
+      <td><a href="#ar0156">ar</a>, <a href="#bn0156">bn</a>, <a href="#ca0156">ca</a>, <a href="#de0156">de</a>, <a href="#es0156">es</a>, <a href="#fa0156">fa</a>, <a href="#gu0156">gu</a>, <a href="#hu0156">hu</a>, <a href="#it0156">it</a>, <a href="#ja0156">ja</a>, <a href="#ko0156">ko</a>, <a href="#nb0156">nb</a>, <a href="#nn0156">nn</a>, <a href="#pa0156">pa</a>, <a href="#pl0156">pl</a>, <a href="#sv0156">sv</a>, <a href="#tl0156">tl</a>, <a href="#tr0156">tr</a>, <a href="#ur0156">ur</a>, <a href="#yue0156">yue</a>, <a href="#zh0156">zh</a></td>
     </tr>
     <tr>
       <td>0158</td>
@@ -6811,7 +6853,7 @@
       <td>0210</td>
       <td><a href="http://africanstorybook.org/stories/tingi-and-cows">Tingi and the Cows</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0210">ar</a>, <a href="#bn0210">bn</a>, <a href="#de0210">de</a>, <a href="#es0210">es</a>, <a href="#fa0210">fa</a>, <a href="#it0210">it</a>, <a href="#ja0210">ja</a>, <a href="#ko0210">ko</a>, <a href="#nb0210">nb</a>, <a href="#nn0210">nn</a>, <a href="#pa0210">pa</a>, <a href="#pl0210">pl</a>, <a href="#tl0210">tl</a>, <a href="#tr0210">tr</a>, <a href="#ur0210">ur</a>, <a href="#yue0210">yue</a>, <a href="#zh0210">zh</a></td>
+      <td><a href="#ar0210">ar</a>, <a href="#bn0210">bn</a>, <a href="#de0210">de</a>, <a href="#es0210">es</a>, <a href="#fa0210">fa</a>, <a href="#hu0210">hu</a>, <a href="#it0210">it</a>, <a href="#ja0210">ja</a>, <a href="#ko0210">ko</a>, <a href="#nb0210">nb</a>, <a href="#nn0210">nn</a>, <a href="#pa0210">pa</a>, <a href="#pl0210">pl</a>, <a href="#tl0210">tl</a>, <a href="#tr0210">tr</a>, <a href="#ur0210">ur</a>, <a href="#yue0210">yue</a>, <a href="#zh0210">zh</a></td>
     </tr>
     <tr>
       <td>0212</td>
@@ -6895,7 +6937,7 @@
       <td>0271</td>
       <td><a href="http://africanstorybook.org/stories/two">Two</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0271">ar</a>, <a href="#bn0271">bn</a>, <a href="#de0271">de</a>, <a href="#es0271">es</a>, <a href="#fa0271">fa</a>, <a href="#gu0271">gu</a>, <a href="#it0271">it</a>, <a href="#ja0271">ja</a>, <a href="#ko0271">ko</a>, <a href="#nb0271">nb</a>, <a href="#nn0271">nn</a>, <a href="#pa0271">pa</a>, <a href="#pl0271">pl</a>, <a href="#tl0271">tl</a>, <a href="#tr0271">tr</a>, <a href="#ur0271">ur</a>, <a href="#vi0271">vi</a>, <a href="#yue0271">yue</a>, <a href="#zh0271">zh</a></td>
+      <td><a href="#ar0271">ar</a>, <a href="#bn0271">bn</a>, <a href="#de0271">de</a>, <a href="#es0271">es</a>, <a href="#fa0271">fa</a>, <a href="#gu0271">gu</a>, <a href="#hu0271">hu</a>, <a href="#it0271">it</a>, <a href="#ja0271">ja</a>, <a href="#ko0271">ko</a>, <a href="#nb0271">nb</a>, <a href="#nn0271">nn</a>, <a href="#pa0271">pa</a>, <a href="#pl0271">pl</a>, <a href="#tl0271">tl</a>, <a href="#tr0271">tr</a>, <a href="#ur0271">ur</a>, <a href="#vi0271">vi</a>, <a href="#yue0271">yue</a>, <a href="#zh0271">zh</a></td>
     </tr>
     <tr>
       <td>0277</td>
@@ -6931,7 +6973,7 @@
       <td>0296</td>
       <td><a href="http://africanstorybook.org/stories/tom-banana-seller">Tom the banana seller</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0296">ar</a>, <a href="#bn0296">bn</a>, <a href="#de0296">de</a>, <a href="#es0296">es</a>, <a href="#fa0296">fa</a>, <a href="#it0296">it</a>, <a href="#ko0296">ko</a>, <a href="#nb0296">nb</a>, <a href="#nn0296">nn</a>, <a href="#pa0296">pa</a>, <a href="#pl0296">pl</a>, <a href="#tl0296">tl</a>, <a href="#tr0296">tr</a>, <a href="#ur0296">ur</a>, <a href="#yue0296">yue</a>, <a href="#zh0296">zh</a></td>
+      <td><a href="#ar0296">ar</a>, <a href="#bn0296">bn</a>, <a href="#de0296">de</a>, <a href="#es0296">es</a>, <a href="#fa0296">fa</a>, <a href="#hu0296">hu</a>, <a href="#it0296">it</a>, <a href="#ko0296">ko</a>, <a href="#nb0296">nb</a>, <a href="#nn0296">nn</a>, <a href="#pa0296">pa</a>, <a href="#pl0296">pl</a>, <a href="#tl0296">tl</a>, <a href="#tr0296">tr</a>, <a href="#ur0296">ur</a>, <a href="#yue0296">yue</a>, <a href="#zh0296">zh</a></td>
     </tr>
     <tr>
       <td>0302</td>
@@ -6991,7 +7033,7 @@
       <td>0327</td>
       <td><a href="http://africanstorybook.org/stories/counting-animals">Counting animals</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#aeb0327">aeb</a>, <a href="#ar0327">ar</a>, <a href="#bn0327">bn</a>, <a href="#de0327">de</a>, <a href="#es0327">es</a>, <a href="#fa0327">fa</a>, <a href="#it0327">it</a>, <a href="#ja0327">ja</a>, <a href="#ko0327">ko</a>, <a href="#nb0327">nb</a>, <a href="#nn0327">nn</a>, <a href="#pa0327">pa</a>, <a href="#pl0327">pl</a>, <a href="#tl0327">tl</a>, <a href="#tr0327">tr</a>, <a href="#ur0327">ur</a>, <a href="#vi0327">vi</a>, <a href="#yue0327">yue</a>, <a href="#zh0327">zh</a></td>
+      <td><a href="#aeb0327">aeb</a>, <a href="#ar0327">ar</a>, <a href="#bn0327">bn</a>, <a href="#de0327">de</a>, <a href="#es0327">es</a>, <a href="#fa0327">fa</a>, <a href="#hu0327">hu</a>, <a href="#it0327">it</a>, <a href="#ja0327">ja</a>, <a href="#ko0327">ko</a>, <a href="#nb0327">nb</a>, <a href="#nn0327">nn</a>, <a href="#pa0327">pa</a>, <a href="#pl0327">pl</a>, <a href="#tl0327">tl</a>, <a href="#tr0327">tr</a>, <a href="#ur0327">ur</a>, <a href="#vi0327">vi</a>, <a href="#yue0327">yue</a>, <a href="#zh0327">zh</a></td>
     </tr>
     <tr>
       <td>0329</td>
