--- a/stories/index.html
+++ b/stories/index.html
@@ -2403,6 +2403,12 @@
       <td><a name="hu0004"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0006</td>
+      <td><a href="/stories/hu/0006_anansi-és-a-bölcsesség_slides.html" target="_blank">Anansi és a bölcsesség</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0006"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0008</td>
       <td><a href="/stories/hu/0008_mit-csinálsz_slides.html" target="_blank">Mit csinálsz?</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2497,6 +2503,18 @@
       <td><a href="/stories/hu/0327_állatos-számoló_slides.html" target="_blank">Állatos számoló</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="hu0327"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0337</td>
+      <td><a href="/stories/hu/0337_viaszgyermekek_slides.html" target="_blank">Viaszgyermekek</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0337"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0342</td>
+      <td><a href="/stories/hu/0342_a-büntetés_slides.html" target="_blank">A büntetés</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0342"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -2991,6 +3009,12 @@
       <td><a name="ja0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0234</td>
+      <td><a href="/stories/ja/0234_アンディスワはサッカースター_slides.html" target="_blank">アンディスワはサッカースター</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0234"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0253</td>
       <td><a href="/stories/ja/0253_私の絵本_slides.html" target="_blank">私の絵本</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3013,6 +3037,12 @@
       <td><a href="/stories/ja/0294_おばあちゃんのバナナ_slides.html" target="_blank">おばあちゃんのバナナ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ja0294"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0296</td>
+      <td><a href="/stories/ja/0296_バナナ売りのトム_slides.html" target="_blank">バナナ売りのトム</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0296"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0302</td>
@@ -3043,6 +3073,12 @@
       <td><a href="/stories/ja/0329_怠け者のアナンシ_slides.html" target="_blank">怠け者のアナンシ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ja0329"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0337</td>
+      <td><a href="/stories/ja/0337_ワックスの子供たち_slides.html" target="_blank">ワックスの子供たち</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0337"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0342</td>
@@ -5375,6 +5411,12 @@
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTk8tWk1CdVRuZFk"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="sv0204"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
+    <tr>
+      <td>0271</td>
+      <td><a href="/stories/sv/0271_to_slides.html" target="_blank">To</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTk8tWk1CdVRuZFk"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="sv0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
   </tbody>
 </table>
 
@@ -6493,7 +6535,7 @@
       <td>0006</td>
       <td><a href="http://africanstorybook.org/stories/anansi-and-wisdom">Anansi and Wisdom</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0006">ar</a>, <a href="#bn0006">bn</a>, <a href="#de0006">de</a>, <a href="#eo0006">eo</a>, <a href="#es0006">es</a>, <a href="#fa0006">fa</a>, <a href="#hi0006">hi</a>, <a href="#it0006">it</a>, <a href="#ja0006">ja</a>, <a href="#ko0006">ko</a>, <a href="#nb0006">nb</a>, <a href="#nn0006">nn</a>, <a href="#pa0006">pa</a>, <a href="#pl0006">pl</a>, <a href="#ru0006">ru</a>, <a href="#tl0006">tl</a>, <a href="#tr0006">tr</a>, <a href="#ur0006">ur</a>, <a href="#vi0006">vi</a>, <a href="#yue0006">yue</a>, <a href="#zh0006">zh</a></td>
+      <td><a href="#ar0006">ar</a>, <a href="#bn0006">bn</a>, <a href="#de0006">de</a>, <a href="#eo0006">eo</a>, <a href="#es0006">es</a>, <a href="#fa0006">fa</a>, <a href="#hi0006">hi</a>, <a href="#hu0006">hu</a>, <a href="#it0006">it</a>, <a href="#ja0006">ja</a>, <a href="#ko0006">ko</a>, <a href="#nb0006">nb</a>, <a href="#nn0006">nn</a>, <a href="#pa0006">pa</a>, <a href="#pl0006">pl</a>, <a href="#ru0006">ru</a>, <a href="#tl0006">tl</a>, <a href="#tr0006">tr</a>, <a href="#ur0006">ur</a>, <a href="#vi0006">vi</a>, <a href="#yue0006">yue</a>, <a href="#zh0006">zh</a></td>
     </tr>
     <tr>
       <td>0007</td>
@@ -6895,7 +6937,7 @@
       <td>0234</td>
       <td><a href="http://africanstorybook.org/stories/andiswa-soccer-star">Andiswa Soccer Star</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0234">ar</a>, <a href="#bn0234">bn</a>, <a href="#de0234">de</a>, <a href="#es0234">es</a>, <a href="#fa0234">fa</a>, <a href="#gu0234">gu</a>, <a href="#it0234">it</a>, <a href="#ko0234">ko</a>, <a href="#nb0234">nb</a>, <a href="#nn0234">nn</a>, <a href="#pa0234">pa</a>, <a href="#pl0234">pl</a>, <a href="#tl0234">tl</a>, <a href="#tr0234">tr</a>, <a href="#ur0234">ur</a>, <a href="#yue0234">yue</a>, <a href="#zh0234">zh</a></td>
+      <td><a href="#ar0234">ar</a>, <a href="#bn0234">bn</a>, <a href="#de0234">de</a>, <a href="#es0234">es</a>, <a href="#fa0234">fa</a>, <a href="#gu0234">gu</a>, <a href="#it0234">it</a>, <a href="#ja0234">ja</a>, <a href="#ko0234">ko</a>, <a href="#nb0234">nb</a>, <a href="#nn0234">nn</a>, <a href="#pa0234">pa</a>, <a href="#pl0234">pl</a>, <a href="#tl0234">tl</a>, <a href="#tr0234">tr</a>, <a href="#ur0234">ur</a>, <a href="#yue0234">yue</a>, <a href="#zh0234">zh</a></td>
     </tr>
     <tr>
       <td>0243</td>
@@ -6937,7 +6979,7 @@
       <td>0271</td>
       <td><a href="http://africanstorybook.org/stories/two">Two</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0271">ar</a>, <a href="#bn0271">bn</a>, <a href="#de0271">de</a>, <a href="#es0271">es</a>, <a href="#fa0271">fa</a>, <a href="#gu0271">gu</a>, <a href="#hu0271">hu</a>, <a href="#it0271">it</a>, <a href="#ja0271">ja</a>, <a href="#ko0271">ko</a>, <a href="#nb0271">nb</a>, <a href="#nn0271">nn</a>, <a href="#pa0271">pa</a>, <a href="#pl0271">pl</a>, <a href="#tl0271">tl</a>, <a href="#tr0271">tr</a>, <a href="#ur0271">ur</a>, <a href="#vi0271">vi</a>, <a href="#yue0271">yue</a>, <a href="#zh0271">zh</a></td>
+      <td><a href="#ar0271">ar</a>, <a href="#bn0271">bn</a>, <a href="#de0271">de</a>, <a href="#es0271">es</a>, <a href="#fa0271">fa</a>, <a href="#gu0271">gu</a>, <a href="#hu0271">hu</a>, <a href="#it0271">it</a>, <a href="#ja0271">ja</a>, <a href="#ko0271">ko</a>, <a href="#nb0271">nb</a>, <a href="#nn0271">nn</a>, <a href="#pa0271">pa</a>, <a href="#pl0271">pl</a>, <a href="#sv0271">sv</a>, <a href="#tl0271">tl</a>, <a href="#tr0271">tr</a>, <a href="#ur0271">ur</a>, <a href="#vi0271">vi</a>, <a href="#yue0271">yue</a>, <a href="#zh0271">zh</a></td>
     </tr>
     <tr>
       <td>0277</td>
@@ -6973,7 +7015,7 @@
       <td>0296</td>
       <td><a href="http://africanstorybook.org/stories/tom-banana-seller">Tom the banana seller</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0296">ar</a>, <a href="#bn0296">bn</a>, <a href="#de0296">de</a>, <a href="#es0296">es</a>, <a href="#fa0296">fa</a>, <a href="#hu0296">hu</a>, <a href="#it0296">it</a>, <a href="#ko0296">ko</a>, <a href="#nb0296">nb</a>, <a href="#nn0296">nn</a>, <a href="#pa0296">pa</a>, <a href="#pl0296">pl</a>, <a href="#tl0296">tl</a>, <a href="#tr0296">tr</a>, <a href="#ur0296">ur</a>, <a href="#yue0296">yue</a>, <a href="#zh0296">zh</a></td>
+      <td><a href="#ar0296">ar</a>, <a href="#bn0296">bn</a>, <a href="#de0296">de</a>, <a href="#es0296">es</a>, <a href="#fa0296">fa</a>, <a href="#hu0296">hu</a>, <a href="#it0296">it</a>, <a href="#ja0296">ja</a>, <a href="#ko0296">ko</a>, <a href="#nb0296">nb</a>, <a href="#nn0296">nn</a>, <a href="#pa0296">pa</a>, <a href="#pl0296">pl</a>, <a href="#tl0296">tl</a>, <a href="#tr0296">tr</a>, <a href="#ur0296">ur</a>, <a href="#yue0296">yue</a>, <a href="#zh0296">zh</a></td>
     </tr>
     <tr>
       <td>0302</td>
@@ -7051,7 +7093,7 @@
       <td>0337</td>
       <td><a href="http://africanstorybook.org/stories/children-wax">Children of wax</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0337">ar</a>, <a href="#bn0337">bn</a>, <a href="#de0337">de</a>, <a href="#es0337">es</a>, <a href="#fa0337">fa</a>, <a href="#gu0337">gu</a>, <a href="#it0337">it</a>, <a href="#ko0337">ko</a>, <a href="#nb0337">nb</a>, <a href="#nl0337">nl</a>, <a href="#nn0337">nn</a>, <a href="#pa0337">pa</a>, <a href="#pl0337">pl</a>, <a href="#tl0337">tl</a>, <a href="#tr0337">tr</a>, <a href="#ur0337">ur</a>, <a href="#vi0337">vi</a>, <a href="#yue0337">yue</a>, <a href="#zh0337">zh</a></td>
+      <td><a href="#ar0337">ar</a>, <a href="#bn0337">bn</a>, <a href="#de0337">de</a>, <a href="#es0337">es</a>, <a href="#fa0337">fa</a>, <a href="#gu0337">gu</a>, <a href="#hu0337">hu</a>, <a href="#it0337">it</a>, <a href="#ja0337">ja</a>, <a href="#ko0337">ko</a>, <a href="#nb0337">nb</a>, <a href="#nl0337">nl</a>, <a href="#nn0337">nn</a>, <a href="#pa0337">pa</a>, <a href="#pl0337">pl</a>, <a href="#tl0337">tl</a>, <a href="#tr0337">tr</a>, <a href="#ur0337">ur</a>, <a href="#vi0337">vi</a>, <a href="#yue0337">yue</a>, <a href="#zh0337">zh</a></td>
     </tr>
     <tr>
       <td>0341</td>
@@ -7063,7 +7105,7 @@
       <td>0342</td>
       <td><a href="http://africanstorybook.org/stories/punishment">Punishment</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0342">ar</a>, <a href="#bn0342">bn</a>, <a href="#de0342">de</a>, <a href="#es0342">es</a>, <a href="#fa0342">fa</a>, <a href="#it0342">it</a>, <a href="#ja0342">ja</a>, <a href="#ko0342">ko</a>, <a href="#nb0342">nb</a>, <a href="#nn0342">nn</a>, <a href="#pa0342">pa</a>, <a href="#pl0342">pl</a>, <a href="#tl0342">tl</a>, <a href="#tr0342">tr</a>, <a href="#ur0342">ur</a>, <a href="#vi0342">vi</a>, <a href="#yue0342">yue</a>, <a href="#zh0342">zh</a></td>
+      <td><a href="#ar0342">ar</a>, <a href="#bn0342">bn</a>, <a href="#de0342">de</a>, <a href="#es0342">es</a>, <a href="#fa0342">fa</a>, <a href="#hu0342">hu</a>, <a href="#it0342">it</a>, <a href="#ja0342">ja</a>, <a href="#ko0342">ko</a>, <a href="#nb0342">nb</a>, <a href="#nn0342">nn</a>, <a href="#pa0342">pa</a>, <a href="#pl0342">pl</a>, <a href="#tl0342">tl</a>, <a href="#tr0342">tr</a>, <a href="#ur0342">ur</a>, <a href="#vi0342">vi</a>, <a href="#yue0342">yue</a>, <a href="#zh0342">zh</a></td>
     </tr>
     <tr>
       <td>0359</td>
