--- a/stories/index.html
+++ b/stories/index.html
@@ -2463,10 +2463,22 @@
       <td><a name="hu0129"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0141</td>
+      <td><a href="/stories/hu/0141_a-csirke-és-a-százlábú_slides.html" target="_blank">A csirke és a százlábú</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0141"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0156</td>
       <td><a href="/stories/hu/0156_az-éhes-krokodil_slides.html" target="_blank">Az éhes krokodil</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="hu0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0158</td>
+      <td><a href="/stories/hu/0158_a-tyúk-és-a-sas_slides.html" target="_blank">A tyúk és a sas</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0158"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0210</td>
@@ -6805,7 +6817,7 @@
       <td>0141</td>
       <td><a href="http://africanstorybook.org/stories/chicken-and-millipede">Chicken and Millipede</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0141">ar</a>, <a href="#bn0141">bn</a>, <a href="#de0141">de</a>, <a href="#es0141">es</a>, <a href="#fa0141">fa</a>, <a href="#it0141">it</a>, <a href="#ja0141">ja</a>, <a href="#km0141">km</a>, <a href="#ko0141">ko</a>, <a href="#nb0141">nb</a>, <a href="#nn0141">nn</a>, <a href="#pa0141">pa</a>, <a href="#pl0141">pl</a>, <a href="#tl0141">tl</a>, <a href="#tr0141">tr</a>, <a href="#ur0141">ur</a>, <a href="#yue0141">yue</a>, <a href="#zh0141">zh</a></td>
+      <td><a href="#ar0141">ar</a>, <a href="#bn0141">bn</a>, <a href="#de0141">de</a>, <a href="#es0141">es</a>, <a href="#fa0141">fa</a>, <a href="#hu0141">hu</a>, <a href="#it0141">it</a>, <a href="#ja0141">ja</a>, <a href="#km0141">km</a>, <a href="#ko0141">ko</a>, <a href="#nb0141">nb</a>, <a href="#nn0141">nn</a>, <a href="#pa0141">pa</a>, <a href="#pl0141">pl</a>, <a href="#tl0141">tl</a>, <a href="#tr0141">tr</a>, <a href="#ur0141">ur</a>, <a href="#yue0141">yue</a>, <a href="#zh0141">zh</a></td>
     </tr>
     <tr>
       <td>0143</td>
@@ -6835,7 +6847,7 @@
       <td>0158</td>
       <td><a href="http://africanstorybook.org/stories/hen-and-eagle">Hen and Eagle</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0158">ar</a>, <a href="#bn0158">bn</a>, <a href="#de0158">de</a>, <a href="#es0158">es</a>, <a href="#fa0158">fa</a>, <a href="#it0158">it</a>, <a href="#ja0158">ja</a>, <a href="#ko0158">ko</a>, <a href="#nb0158">nb</a>, <a href="#nn0158">nn</a>, <a href="#pa0158">pa</a>, <a href="#pl0158">pl</a>, <a href="#tl0158">tl</a>, <a href="#tr0158">tr</a>, <a href="#ur0158">ur</a>, <a href="#yue0158">yue</a>, <a href="#zh0158">zh</a></td>
+      <td><a href="#ar0158">ar</a>, <a href="#bn0158">bn</a>, <a href="#de0158">de</a>, <a href="#es0158">es</a>, <a href="#fa0158">fa</a>, <a href="#hu0158">hu</a>, <a href="#it0158">it</a>, <a href="#ja0158">ja</a>, <a href="#ko0158">ko</a>, <a href="#nb0158">nb</a>, <a href="#nn0158">nn</a>, <a href="#pa0158">pa</a>, <a href="#pl0158">pl</a>, <a href="#tl0158">tl</a>, <a href="#tr0158">tr</a>, <a href="#ur0158">ur</a>, <a href="#yue0158">yue</a>, <a href="#zh0158">zh</a></td>
     </tr>
     <tr>
       <td>0172</td>
