--- a/stories/index.html
+++ b/stories/index.html
@@ -2421,6 +2421,12 @@
       <td><a name="hu0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0027</td>
+      <td><a href="/stories/hu/0027_a-döntés_slides.html" target="_blank">A döntés</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hu0027"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0030</td>
       <td><a href="/stories/hu/0030_érzések_slides.html" target="_blank">Érzések</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2877,6 +2883,12 @@
       <td><a name="ja0003"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0004</td>
+      <td><a href="/stories/ja/0004_ヤギと犬と牛_slides.html" target="_blank">ヤギと犬と牛</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0004"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0006</td>
       <td><a href="/stories/ja/0006_アナンシと知恵_slides.html" target="_blank">アナンシと知恵</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2953,6 +2965,12 @@
       <td><a href="/stories/ja/0110_小さな種：ワンガリ・マータイの物語_slides.html" target="_blank">小さな種：ワンガリ・マータイの物語</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ja0110"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0111</td>
+      <td><a href="/stories/ja/0111_カバに毛がない訳_slides.html" target="_blank">カバに毛がない訳</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0111"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0112</td>
@@ -6541,7 +6559,7 @@
       <td>0004</td>
       <td><a href="http://africanstorybook.org/stories/goat-dog-and-cow">Goat, Dog, and Cow</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0004">ar</a>, <a href="#bn0004">bn</a>, <a href="#de0004">de</a>, <a href="#es0004">es</a>, <a href="#fa0004">fa</a>, <a href="#hi0004">hi</a>, <a href="#hu0004">hu</a>, <a href="#it0004">it</a>, <a href="#ko0004">ko</a>, <a href="#nb0004">nb</a>, <a href="#nn0004">nn</a>, <a href="#pa0004">pa</a>, <a href="#pl0004">pl</a>, <a href="#ru0004">ru</a>, <a href="#tl0004">tl</a>, <a href="#tr0004">tr</a>, <a href="#ur0004">ur</a>, <a href="#yue0004">yue</a>, <a href="#zh0004">zh</a></td>
+      <td><a href="#ar0004">ar</a>, <a href="#bn0004">bn</a>, <a href="#de0004">de</a>, <a href="#es0004">es</a>, <a href="#fa0004">fa</a>, <a href="#hi0004">hi</a>, <a href="#hu0004">hu</a>, <a href="#it0004">it</a>, <a href="#ja0004">ja</a>, <a href="#ko0004">ko</a>, <a href="#nb0004">nb</a>, <a href="#nn0004">nn</a>, <a href="#pa0004">pa</a>, <a href="#pl0004">pl</a>, <a href="#ru0004">ru</a>, <a href="#tl0004">tl</a>, <a href="#tr0004">tr</a>, <a href="#ur0004">ur</a>, <a href="#yue0004">yue</a>, <a href="#zh0004">zh</a></td>
     </tr>
     <tr>
       <td>0006</td>
@@ -6589,7 +6607,7 @@
       <td>0027</td>
       <td><a href="http://africanstorybook.org/stories/decision">Decision</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0027">ar</a>, <a href="#bn0027">bn</a>, <a href="#de0027">de</a>, <a href="#es0027">es</a>, <a href="#fa0027">fa</a>, <a href="#it0027">it</a>, <a href="#ja0027">ja</a>, <a href="#ko0027">ko</a>, <a href="#nb0027">nb</a>, <a href="#nn0027">nn</a>, <a href="#pa0027">pa</a>, <a href="#pl0027">pl</a>, <a href="#ru0027">ru</a>, <a href="#tl0027">tl</a>, <a href="#tr0027">tr</a>, <a href="#ur0027">ur</a>, <a href="#vi0027">vi</a>, <a href="#yue0027">yue</a>, <a href="#zh0027">zh</a></td>
+      <td><a href="#ar0027">ar</a>, <a href="#bn0027">bn</a>, <a href="#de0027">de</a>, <a href="#es0027">es</a>, <a href="#fa0027">fa</a>, <a href="#hu0027">hu</a>, <a href="#it0027">it</a>, <a href="#ja0027">ja</a>, <a href="#ko0027">ko</a>, <a href="#nb0027">nb</a>, <a href="#nn0027">nn</a>, <a href="#pa0027">pa</a>, <a href="#pl0027">pl</a>, <a href="#ru0027">ru</a>, <a href="#tl0027">tl</a>, <a href="#tr0027">tr</a>, <a href="#ur0027">ur</a>, <a href="#vi0027">vi</a>, <a href="#yue0027">yue</a>, <a href="#zh0027">zh</a></td>
     </tr>
     <tr>
       <td>0030</td>
@@ -6739,7 +6757,7 @@
       <td>0111</td>
       <td><a href="http://africanstorybook.org/stories/why-hippos-have-no-hair">Why hippos have no hair</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0111">ar</a>, <a href="#bn0111">bn</a>, <a href="#de0111">de</a>, <a href="#es0111">es</a>, <a href="#fa0111">fa</a>, <a href="#it0111">it</a>, <a href="#ko0111">ko</a>, <a href="#nb0111">nb</a>, <a href="#nn0111">nn</a>, <a href="#pa0111">pa</a>, <a href="#pl0111">pl</a>, <a href="#tl0111">tl</a>, <a href="#tr0111">tr</a>, <a href="#ur0111">ur</a>, <a href="#yue0111">yue</a>, <a href="#zh0111">zh</a></td>
+      <td><a href="#ar0111">ar</a>, <a href="#bn0111">bn</a>, <a href="#de0111">de</a>, <a href="#es0111">es</a>, <a href="#fa0111">fa</a>, <a href="#it0111">it</a>, <a href="#ja0111">ja</a>, <a href="#ko0111">ko</a>, <a href="#nb0111">nb</a>, <a href="#nn0111">nn</a>, <a href="#pa0111">pa</a>, <a href="#pl0111">pl</a>, <a href="#tl0111">tl</a>, <a href="#tr0111">tr</a>, <a href="#ur0111">ur</a>, <a href="#yue0111">yue</a>, <a href="#zh0111">zh</a></td>
     </tr>
     <tr>
       <td>0112</td>
